redactable/tests/ui/sensitive_scalar_non_secret_rejected.stderr
error[E0277]: the trait bound `u64: redactable::__private::PolicyField<Pii>` is not satisfied
 --> tests/ui/sensitive_scalar_non_secret_rejected.rs:3:17
  |
3 | #[derive(Clone, Sensitive, serde::Serialize)]
  |                 ^^^^^^^^^ the trait `redactable::PolicyApplicable` is not implemented for `u64`
  |
  = help: the following other types implement trait `redactable::PolicyApplicable`:
            Arc<T>
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
            Cell<T>
            Cow<'_, str>
            HashMap<K, V, S>
            HashSet<T, S>
          and $N others
  = note: required for `u64` to implement `redactable::__private::RecursivePolicyField<Pii>`
  = note: required for `u64` to implement `redactable::__private::PolicyField<Pii>`
  = help: see issue #48214
  = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)
